--- a/roles/devstation/tasks/main.yml
+++ b/roles/devstation/tasks/main.yml
@@ -1,16 +1,11 @@
 ---
-# file: roles/common/tasks/main.yml
+# file: tasks/main.yml
 
 # specify the packages and the packager to use
-# see the vars folder for a complete list
 - name: load OS specific variables (see roles/*/vars/*)
   include_vars: "{{ ansible_os_family }}.yml"
 
-- name: upgrade all packages
-  sudo: yes
-  action: "{{ packager }} pkg=* state=latest"
-
-- name: installing default packages
+- name: install python3 packages
   sudo: yes
   action: "{{ packager }} pkg={{ item }} state=latest"
   with_items: packages
