--- a/self.yml
+++ b/self.yml
@@ -44,7 +44,8 @@
 
 
   roles:
-    - accounts
+  - accounts
+    # - common
     # - { role: accounts, useraccountfiles: [ default.yml ]}
 
   # roles:
