--- a/assets/users/defaults.yml
+++ b/assets/users/defaults.yml
@@ -5,80 +5,51 @@
 # define an empty list
 users:
   - name: archf
-    groups: 'adm,wheel,lp'
+    groups: 'adm,wheel,lp,users'
     append: yes
     password: 'admin'
+    update_password: on_create
     comments: 'Felix Archambault'
     # should this be in a host var or group var (on a per group or machine basis)
     # keys to remote access the target
-    management_ssh_keys:
-      - "{{ USERS_DIR }}/public_keys/test.pub"
-      # - "{{ USERS_DIR }}/public_keys/desktop.pub"
-      # - "{{ USERS_DIR }}/public_keys/laptop.pub"
-      # - "{{ playbook_dir }}/assets/users/public_keys/laptop.pub"
-      # - "{{ playbook_dir }}/assets/users/public_keys/desktop.pub"
-      # - "{{ playbook_dir }}/assets/users/public_keys/vl.pub"
-    # other keys that will be generated
-    extra_ssh_keys:
-      - github
-      - bitbucket
+    authorized:
+      - "{{ ASSETS_DIR }}/public_keys/vl.pub"
+    # optional stuff (ansible will not faile if omitted)
     dotfiles_ssh: 'git@bitbucket.org:archambf/dotfiles.git'
     #unused
-    dotfiles_https: 'https://archambf@bitbucket.org/archambf/dotfiles.git'
-    # state: absent
-    # remove: yes
-  # - name: user3
-  #   password: 'admin'
-  #   comments: 'this is user 1'
-  #   ssh_keys: []
-  #   extra_ssh_keys: []
-  #   # state: absent
-  #   # remove: yes
-  # - name: user4
-  #   append: yes
-  #   password: password'admin'
-  #   comments: 'this is user 2'
-  #   ssh_keys: []
-  #   extra_ssh_keys: []
-
-# users_removed:
-#   - user1
-#   - user2
-#   - user3
-#   - user4
-
+    # dotfiles_https: 'https://archambf@bitbucket.org/archambf/dotfiles.git'
+  - name: backup
+    password: 'admin'
+    update_password: on_create
+    system: yes
+    authorized: []
+    # extra_ssh_keys: []
+  - name: collectd
+    password: 'admin'
+    update_password: on_create
+    system: yes
+    authorized: []
 
 ### template
 
 # users: []
 # groups: []
-# users_removed: []
-# groups_removed: []
 
 # users:
 #   - name: "foo"
-#     groups:
-#       - adm
-#       - wheel
-#       - lp
-#     ssh_keys:           # Keys to add to authorized_keys
+    # groups: 'adm,wheel,lp,users'
+#     authorized:           # Keys to add to authorized_keys
 #       - "ssh-1"
 #       - "ssh-2"
 #     append: "no"        # (Optional) yes by default
 #     pass: "$6$...."     # (Optional) Set the user's password to this crypted value.
-#     comment: "bla"      # (Optional) ???
+#     comment: "bla"      # (Optional) User Full name
 #     shell: "/bin/bash"  # (Optional) Set the user's shell. defaults to /bin/bash
 #     home: "/home/foo"   # (Optional) default to /home/<username>
 #     system: no          # (Optional)
 #     move_home: no       # (Optional)
 #     non_unique: no      # (Optional)
-#     update_password: no # (Optional) default to always (will change passwd if they differ
-#   - name: "baz"
-#     groups:
-#       - adm
-#       - wheel
-#       - lp
-#     ssh_keys: []
+#     update_password: no # (Optional) default to on_create (will change passwd if they differ
 
 # groups:
 #   - name: "foo"
@@ -87,9 +58,3 @@ users:
 #   - name: "bar"
 #     gid: 4000
 #     system: no
-
-# users_removed:
-#   - name: bambi
-
-# groups_removed:
-#   - name: "dead-group"
