--- a/roles/network/vars/RedHat.yml
+++ b/roles/network/vars/RedHat.yml
@@ -5,5 +5,4 @@ packages:
   - bridge-utils
   - iputils
 
-netwrk_conf_path: "/tmp/syconfigtest"
-# netwrk_conf_path: "/etc/sysconfig/network-scripts"
+netwrk_conf_path: "/etc/sysconfig/network-scripts"
