--- a/assets/users/defaults.yml
+++ b/assets/users/defaults.yml
@@ -10,25 +10,27 @@ users:
     password: 'admin'
     update_password: on_create
     comments: 'Felix Archambault'
+    shell: "/bin/zsh"
     # should this be in a host var or group var (on a per group or machine basis)
     # keys to remote access the target
     authorized:
-      - "{{ ASSETS_DIR }}/public_keys/vl.pub"
-    # optional stuff (ansible will not faile if omitted)
+      - "{{ ASSETS_DIR }}/public_keys/archambf_vlcygwin.pub"
+      - "{{ ASSETS_DIR }}/public_keys/archf_dbox.pub"
+    # optional stuff (ansible will not fail if omitted)
     dotfiles_ssh: 'git@bitbucket.org:archambf/dotfiles.git'
     #unused
     # dotfiles_https: 'https://archambf@bitbucket.org/archambf/dotfiles.git'
-  - name: backup
-    password: 'admin'
-    update_password: on_create
-    system: yes
-    authorized: []
-    # extra_ssh_keys: []
-  - name: collectd
-    password: 'admin'
-    update_password: on_create
-    system: yes
-    authorized: []
+  # - name: backup
+  #   password: 'admin'
+  #   update_password: on_create
+  #   system: yes
+  #   authorized: []
+  #   # extra_ssh_keys: []
+  # - name: collectd
+  #   password: 'admin'
+  #   update_password: on_create
+  #   system: yes
+  #   authorized: []
 
 ### template
 
