--- a/roles/workstation/tasks/main.yml
+++ b/roles/workstation/tasks/main.yml
@@ -6,6 +6,8 @@
   include_vars: "{{ ansible_os_family }}.yml"
 
 - name: install python3 packages
-  sudo: yes
   action: "{{ ansible_pkg_mgr }} pkg={{ item }} state=latest"
   with_items: packages
+
+- name: install entr ( a filesystem watcher )
+  script: install_entr.sh
