--- a/roles/accounts/tasks/main.yml
+++ b/roles/accounts/tasks/main.yml
@@ -54,10 +54,17 @@
   with_subelements:
   - users
   - authorized
+  when: ansible_distribution != "OpenWrt"
 
 - name: fetch the ssh public keys of every account to control machine
   fetch: src="{{ item.home | default('/home/' + item.name) }}/.ssh/{{ item.name }}_{{ ansible_hostname }}.pub" dest="{{ ASSETS_DIR }}/public_keys/" flat=yes
   with_items: users
+  when: ansible_distribution != "OpenWrt"
+
+- name: create a .ssh directory in each user account
+  file: owner="{{ item.name }}" group="{{ item.name }}" path="{{ item.home | default('/home/' + item.name) ~ '/.ssh' }}" state=directory mode=600
+  with_items: users
+  when: item.dotfiles_ssh is defined or item.system is not defined
 
 - name: template a ~/.ssh/config in each user account
   template: src=ssh.config.j2 dest="{{ item.home | default('/home/' + item.name) ~ '/.ssh/config' }}" owner="{{ item.name }}" group="{{ item.name }}" mode=0600
