--- a/roles/common/vars/OpenWrt.yml
+++ b/roles/common/vars/OpenWrt.yml
@@ -19,6 +19,34 @@ packages:
   - kmod-usb-storage
   - kmod-fs-ext4
   - curl
+  - wget
   - wol
   - etherwake
   - less
+  - zsh
+  - openssh-client
+  - openssh-server
+  - openssh-keygen
+  - openssh-sftp-server
+  - openssh-client-utils
+  - ca-certificates
+  - python-openssl
+
+  pip-packages:
+  - python-cheetah
+
+# cobbler requirements
+    # createrepo
+    # httpd (apache2 for Debian/Ubuntu)
+    # mkisofs
+    # mod_wsgi (libapache2-mod-wsgi for Debian/Ubuntu)
+    # mod_ssl (libapache2-mod-ssl)
+    # python-cheetah
+    # python-netaddr
+    # python-simplejson
+    # python-urlgrabber
+    # PyYAML (python-yaml for Debian/Ubuntu)
+    # rsync
+    # syslinux
+    # tftp-server (atftpd for Debian/Ubuntu, though others may work)
+    # yum-utils
