--- a/roles/openwrt/tasks/main.yml
+++ b/roles/openwrt/tasks/main.yml
@@ -3,14 +3,10 @@
 # this is openwrt configuration role. All vars are defined in the host_vars
 # folder
 
-# - name: run uci test
-#   uci: command="set" key="system.@system[0].hostname" value="{{ hostname }}"
-#   notify: uci commit
-
-# # system.@system[0]
-# - name: configure gw hostname
-#   uci: command="set" key="system.@system[0].hostname" value="{{ hostname }}"
-#   notify: uci commit
+# system.@system[0]
+- name: configure gw hostname
+  uci: command="set" key="system.@system[0].hostname" value="{{ hostname }}"
+  notify: uci commit
 
 # - name: change dropbear listening port
 #   uci: command=set key="dropbear.@dropbear[0]
