--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -3,7 +3,7 @@
 
 # specify the packages and the packager to use
 # see the vars folder for a complete list
-- name: load OS specific variables (see roles/*/vars/*)
+- name: load OS specific variables (see ../vars/*)
   include_vars: "{{ ansible_os_family }}.yml"
 
 - name: upgrade all packages
@@ -24,8 +24,11 @@
   selinux: state=disabled
   when: ansible_distribution != "OpenWrt"
 
-- name: template jail2ban jail.local configuration file
-  template: src=jail.local.j2 dest=/etc/fail2ban/jail.local group=root owner=root mode=0644 backup=yes
+#- name: install fail2ban from local tarball on an OpenWrt system
+#  unarchive: src=fail2ban-0.fail2ban-0.9.1.tar.gz dest=/opt/
 
-- name: configure fail2ban service to start on boot and to now be running
-  service: name=fail2ban state=started enabled=true
+#- name: template jail2ban jail.local configuration file
+#  template: src=jail.local.j2 dest=/etc/fail2ban/jail.local group=root owner=root mode=0644 backup=yes
+#
+#- name: configure fail2ban service to start on boot and to now be running
+#  service: name=fail2ban state=started enabled=true
