--- a/roles/workstation/vars/Debian.yml
+++ b/roles/workstation/vars/Debian.yml
@@ -1,16 +1,17 @@
 ---
 # packager: apt
-
 packages:
   - ipython3
   - python-dev
   - ipdb
   - python-pip
   - libinotifytools-dev
-  - pandoc
   - urlview
   - workrave
   - pidgin
   - the_silver_searcher
   - keychain
   - xsel
+  - pandoc
+  - exuberant-ctags
+  - httrack
