account roles removed from repo update README new resolv submodule
Signed-off-by: Félix Archambault <fel.archambault@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "roles/docker"]
 	path = roles/docker
 	url = git@github.com:archf/docker.git
+[submodule "roles/resolv"]
+	path = roles/resolv
+	url = git@github.com:archf/ansible_resolv.git
