--- a/assets/users/defaults.yml
+++ b/assets/users/defaults.yml
@@ -14,51 +14,17 @@ users:
     # should this be in a host var or group var (on a per group or machine basis)
     # keys to remote access the target
     authorized:
-      - "{{ ASSETS_DIR }}/public_keys/archambf_vlcygwin.pub"
-      - "{{ ASSETS_DIR }}/public_keys/archf_dbox.pub"
+      - "{{ ASSETS_DIR }}/public_keys/archambf_vl.pub"
+      - "{{ USERS_DIR }}/public_keys/archf_lb-dev04.pub"
     # optional stuff (ansible will not fail if omitted)
     dotfiles_ssh: 'git@bitbucket.org:archambf/dotfiles.git'
-    #unused
-    # dotfiles_https: 'https://archambf@bitbucket.org/archambf/dotfiles.git'
-  # - name: backup
-  #   password: 'admin'
-  #   update_password: on_create
-  #   system: yes
-  #   authorized: []
-  #   # extra_ssh_keys: []
-  # - name: collectd
-  #   password: 'admin'
-  #   update_password: on_create
-  #   system: yes
-  #   authorized: []
 
 req_groups:
   - synergy
-### template
+
+## defaults
 
 # users: []
-# groups: []
-
-# users:
-#   - name: "foo"
-    # groups: 'adm,wheel,lp,users'
-#     authorized:           # Keys to add to authorized_keys
-#       - "ssh-1"
-#       - "ssh-2"
-#     append: "no"        # (Optional) yes by default
-#     pass: "$6$...."     # (Optional) Set the user's password to this crypted value.
-#     comment: "bla"      # (Optional) User Full name
-#     shell: "/bin/bash"  # (Optional) Set the user's shell. defaults to /bin/bash
-#     home: "/home/foo"   # (Optional) default to /home/<username>
-#     system: no          # (Optional)
-#     move_home: no       # (Optional)
-#     non_unique: no      # (Optional)
-#     update_password: no # (Optional) default to on_create (will change passwd if they differ
-
-# groups:
-#   - name: "foo"
-#     gid: 2000           # (Optional)
-#     system: no          # (Optional)
-#   - name: "bar"
-#     gid: 4000
-#     system: no
+# req_groups: []
+# users_removed: []
+# groups_removed: []
