--- a/roles/openwrt/defaults/main.yml
+++ b/roles/openwrt/defaults/main.yml
@@ -1,11 +1,36 @@
 ---
-# defaults file for openwrt-system
-
+# defaults file for openwrt
 hostname: OpenWrt
-# snmpd:
-#   sysLocation: 'office'
-#   sysContact: 'bofh@example.com'
-#   sysName: 'HeartOfGold'
+
+ntpconf:
+  enabled: 1
+  enable_server: 1
+
+# uci: command=set key="dropbear.@dropbear[0]
+dropbear:
+  port: 22222
+
+ntp_servers:
+  - 0.openwrt.pool.ntp.org
+  - 1.openwrt.pool.ntp.org
+  - 2.openwrt.pool.ntp.org
+  - 2.openwrt.pool.ntp.org
+
+# system.@system[0].zonename
+timezone: utc
+
+# network.lan
+lan:
+  ipaddr: 192.168.1.1
+  netmaks: 255.255.255.0
+
+# dhcp.lan
+dhcp:
+  start: 100
+  limit: 150
+  leasetime: 12h
+
+ddns: {}
 
 wireless:
   - key: ssid
@@ -27,7 +52,7 @@ wireless:
     value: mysecret
     ifaces: [0,3,4]
 
-    # defaults file for openwrt-wireless
+    # defaults file for openwrt
 wireless:
   - key: ssid
     value: CEROwrt
@@ -54,7 +79,7 @@ wireless:
     value: ""
     ifaces: [1,4]
 
-# defaults file for openwrt-ddns
+# defaults file for openwrt
 ddns: {}
 
 dnsmasq:
@@ -81,7 +106,7 @@ firewall:
         - key: name
           value: ssh_lanbox
 
-# defaults file for openwrt-firewall
+# defaults file for openwrt
 firewall:
   # zone 0 is wan
   # zone 1 is lan
