--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "fail2ban"]
-	path = fail2ban
-	url = git@github.com:archf/fail2ban.git
 [submodule "roles/fail2ban"]
 	path = roles/fail2ban
 	url = git@github.com:archf/fail2ban.git
@@ -16,3 +13,6 @@
 [submodule "roles/accounts"]
 	path = roles/accounts
 	url = git@github.com:archf/accounts.git
+[submodule "roles/workstation"]
+	path = roles/workstation
+	url = git@github.com:archf/workstation.git
