added vagrant vm to test playbooks new plays per role update virtualbox_vl task
Signed-off-by: Félix Archambault <fel.archambault@gmail.com>

--- a/task_lib/virtualbox_vl.yml
+++ b/task_lib/virtualbox_vl.yml
@@ -1,7 +1,7 @@
 ---
 # special tasks when provisionning a virtualbox vm
 - name: append user to vboxsf group to enable vbox share automounting
-  sudo: yes
+  become: yes
   command: usermod -a -G vboxsf archf
   when: ansible_virtualization_type == "virtualbox"
 
